crates/formatter/tests/snapshots/snapshots__coder__migrations__000255_agent_stats_usage.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_stats drop column usage;
