crates/formatter/tests/snapshots/snapshots__coder__migrations__000255_agent_stats_usage.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agent_stats
	add column usage boolean not null default false;
