crates/formatter/tests/snapshots/snapshots__coder__migrations__000259_rename_first_organization.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Leave the name as 'coder', there is no downside.
-- The old name 'first-organization' is not used anywhere, just the
-- is_default property.
