crates/formatter/tests/snapshots/snapshots__coder__migrations__000259_rename_first_organization.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update organizations
set name = 'coder', display_name = 'Coder'
where
	-- The old name was too long.
	name
		= 'first-organization'
	and is_default = true;
